
dist/README.UPDATERS file has informations for updaters.

OBS Appliance users who have setup their LVM can just replace 
their appliance image without data loss. The migration will 
happen automatically.


Features
========

 * New obsservicedispatch service to handle source service runs in a queue
   and asynchron.
 * Allow admins to lock or delete users and their home projects via new command
 * Users can be declared sub accounts of other users. Useful for automated scripts.
 * Allow triggering services from the UI.
 * Show a hint to project maintainers, when he/she is not a package maintainer of
   the target package of a request
 * multibuild: allow to build multiple jobs from one source package without the need
               of creating local links
 * /about route is now independent from request format
 * workers are now also tracked when they went away (new states "down", "away" and "dead")

Wanted changes:
===============

 * kiwi builds: build configuration changes from the project where the kiwi 
                file is stored have always an effect now.

 * maintenance_release requests are locking only the source packages on
   creation now. They don't lock the patchinfos. The project gets locked on release
   now.

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until
we will switch from SLES 11 to SLES 12 as default production platform.

openSUSE installations may use systemd (instead of sysvinit) and it should work
in general. Not working are usages like

 # rcobssrcserver status

You will only get the systemd status here.

Also stopping services may not kill all processes, which leads to abstract errors
when trying to restart them. We heard also about trashed MySQL databases when using
systemd.

To avoid these problems you need switch directory to avoid the systemd mapper:

 # cd /etc/init.d
 # ./obssrcserver status|stop|start
