@@ -49,6 +49,8 @@ Wanted changes:
    creation now. They don't lock the patchinfos. The project gets locked on release
    now.
 
+ * service wrapper script for LXC got replaced by a docker alternative
+
 Notes for systems using systemd:
 ================================
 
